changed homepage to .

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ElDodo1.github.io/ProiectWEB",
+  "homepage": ".",
   "name": "picpic",
   "version": "0.1.0",
   "private": true,
