--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "twit": "^2.2.11"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -39,5 +44,6 @@
   },
   "devDependencies": {
     "gh-pages": "^3.0.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
